fix: remove `text-align` variables

--- a/blocks/embed/embed.css
+++ b/blocks/embed/embed.css
@@ -1,6 +1,6 @@
 .embed {
   width: unset;
-  text-align: var(--spectrum-align-center);
+  text-align: center;
   max-width: 800px;
   margin: 32px auto;
 }
