--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -40,7 +40,7 @@
 .table table th,
 .table table td {
   padding: 0.5em;
-  text-align: var(--spectrum-text-align-start);
+  text-align: start;
 }
 
 .table table th p,
