--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,5 +1,5 @@
 .video {
-  text-align: var(--spectrum-text-align-center);
+  text-align: center;
   max-width: 56.25rem;
   margin: 1.5rem auto;
 }
