--- a/styles/base.css
+++ b/styles/base.css
@@ -480,11 +480,6 @@
     var(--spectrum-serif-font-family), "Source Serif Pro", Georgia, serif;
   --spectrum-serif-font: var(--spectrum-serif-font-family-stack);
 
-  /* text align */
-  --spectrum-text-align-start: start;
-  --spectrum-text-align-center: center;
-  --spectrum-text-align-end: end;
-
   /* font weight */
   --spectrum-regular-font-weight: 400;
   --spectrum-medium-font-weight: 500;
